--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "i": "^0.3.7",
     "method-override": "^3.0.0",
     "mysql2": "^3.2.0",
