--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.7",
     "dayjs": "^1.10.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
