--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "i": "^0.3.7",
+    "imgur": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
