--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,17 @@
 SESSIONE_SECRET=ThisIsSecret
+JWT_SECRET=
+IMGUR_CLIENT_ID=
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+FACEBOOK_CALLBACK_URL=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
+DB_HOST=
+DB_DIALECT=
+MYSQL_ROOT_PASSWORD=
+MYSQL_DATABASE=
+MYSQL_PASSWORD=
